# slh-dsa-circuit

./: .gitignore  Dependencies.md  README.md  circomkit.json  circuits.json  package.json
circuits/: main_poseidon.circom  main_sha2.circom  main_shake.circom
circuits/bench/: bench_adrs_sanity.circom  bench_poseidon_F.circom  bench_poseidon_H.circom  bench_poseidon_HMsg.circom  bench_poseidon_Tk.circom  bench_poseidon_Tlen.circom  bench_sha2_F.circom  bench_sha2_H.circom  bench_sha2_HMsg.circom  bench_sha2_Tk.circom  bench_sha2_Tlen.circom  bench_sha2_seed_iv.circom  bench_sha2_wots.circom  bench_sha2_wots_one_chain.circom  bench_shake_F.circom  bench_shake_H.circom  bench_shake_HMsg.circom  bench_shake_Tk.circom  bench_shake_Tlen.circom
circuits/common/: adrs.circom  bytes.circom  digest.circom  fors.circom  ht.circom  params.circom  slhdsa_verify.circom  wots.circom  xmss.circom
circuits/poseidon/: hashes.circom  poseidon_wrap.circom
circuits/sha2/: adrs_encode_sha2.circom  fors.circom  hashes.circom  ht.circom  sha256_midstate.circom  sha256_wrap.circom  slhdsa_verify.circom  wots.circom  xmss.circom
circuits/shake/: adrs_encode_shake.circom  hashes.circom
circuits/test/: test_sha2_F.circom  test_sha2_H.circom  test_sha2_HMsg.circom  (+7 more)
docs/: slh-dsa-primer.md
reference/: Cargo.toml
reference/src/: main.rs
results/: hash_based_analysis.md  results.md  results_summary.md  slh_dsa_spartan2_1k.md  soundness_audit.md
scripts/: bench.sh  parse_r1cs_stats.py  poseidon_sign.mjs  poseidon_verify.mjs  regen_slh_dsa_input.sh  run_tests.sh  vendor.sh
