[package]
name = "slhdsa-bench-oracle"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sha2 = { version = "0.10", features = ["compress"] }
sha3 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "bench-oracle"
path = "src/main.rs"
